--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.19.2",
     "customize-cra": "^0.9.1",
     "date-fns": "^2.0.0-beta.5",
+    "date-fns-tz": "^1.0.10",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.2",
     "immer": "^6.0.2",
